--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "json-log-formatter>=1.1.1",
+    "py-tlsh>=4.7.2",
     "pytest>=8.4.2",
 ]
