--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "argparse>=1.4.0",
     "json-log-formatter>=1.1.1",
     "py-tlsh>=4.7.2",
     "pytest>=8.4.2",
